--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ESI CARD SYNC</title>
+    <title>ESI CARD GENERATOR</title>
     <script src="https://p.trellocdn.com/power-up.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script>
@@ -379,7 +379,7 @@ window.TrelloPowerUp.initialize({
     url: 'https://esisparky.github.io/ESI-TRELLO/index.html',
     height: 900,
     fullscreen: true,
-    title: 'ESI CARD SYNC'
+    title: 'ESI CARD GENERATOR'
 });
                 }
             }];
@@ -390,7 +390,7 @@ window.TrelloPowerUp.initialize({
     }
 }, {
     appKey: 'your-api-key-here', // Add your Trello API key here
-    appName: 'ESI CARD SYNC'
+    appName: 'ESI CARD GENERATOR'
 });
     </script>
 </body>
