--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     
 <body>
     <img src="https://assets.onecompiler.app/42um22r7s/42ukzzdeg/ESI%20Logo%202.png" alt="ESI Logo">
-    <h1>ESI CARD SYNC</h1>
+    <h1>ESI CARD GENERATOR</h1>
     
     <div class="container">
         <div class="input-group">
