--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ window.TrelloPowerUp.initialize({
     'board-buttons': function(t) {
         try {
             return [{
-                text: 'ESI CARD SYNC',
+                text: 'ESI CARD GENERATOR',
                 callback: async function(t) {
                     return await t.modal({
     url: 'https://esisparky.github.io/ESI-TRELLO/index.html',
