--- a/index.html
+++ b/index.html
@@ -401,9 +401,9 @@ window.TrelloPowerUp.initialize({
                 callback: async function(t) {
                     return await t.modal({
     url: 'https://esisparky.github.io/ESI-TRELLO/index.html',
-    height: 900,
+    height: 1000,
     fullscreen: true,
-    Width:900, // Added width parameter
+    width:1200, // Added width parameter
     title: 'ESI CARD GENERATOR'
 });
                 }
