--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
     
 <body>
     <img src="https://assets.onecompiler.app/42um22r7s/42ukzzdeg/ESI%20Logo%202.png" alt="ESI Logo">
-    <h1>ESI CSV-TRELLO 2 WAY SYNC TOOL</h1>
-    
+    <h1>ESI CARD GENERATOR</h1>
+    v
     <div class="container">
         <div class="input-group">
             <label for="apiKeyInput">Trello API Key:</label>
@@ -389,7 +389,7 @@ window.TrelloPowerUp.initialize({
     }
 }, {
     appKey: 'your-api-key-here', // Add your Trello API key here
-    appName: 'ESI CSV Sync Tool'
+    appName: 'ESI CARD GENERATOR'
 });
     </script>
 </body>
