--- a/html/index.html
+++ b/html/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Mass Card Deletion Power-Up</title>
+  <script src="https://p.trellocdn.com/power-up.min.js"></script>
+  <script src="./js/client.js"></script>
+  <link rel="stylesheet" type="text/css" href="./styles/styles.css">
+</head>
+<body>
+  <div id="content">
+    <div id="selection-info"></div>
+    <button id="delete-selected" class="power-up-button" style="display: none;">
+      Delete Selected Cards
+    </button>
+  </div>
+</body>
+</html>
