--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
         // Create download link
         const blob = new Blob([csv], { type: 'text/csv;charset=utf-8;' });
         const link = document.createElement('a');
-        const timestamp = new Date().toISOString().slice(0,19).replace(/[:]/g, '-');
+        const timestamp = new Date().toISOString().split('T')[0];
         link.href = URL.createObjectURL(blob);
         link.download = `trello-export-${timestamp}.csv`;
         link.click();
